// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableDropdown should render with icon 1`] = `
.css-0,
[data-css-0] {
  background-color: #ffffff;
  color: #000000;
  overflow: hidden;
  padding-right: 30px;
  pointer-events: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 5px);
}

.css-1,
[data-css-1] {
  border-top: 1px solid #ecf0f1;
}

.css-2,
[data-css-2] {
  width: 100%;
}

.css-3,
[data-css-4]:hover {
  background-color: #f9fafb;
}

.css-5,
[data-css-5] {
  position: relative;
}

.css-6,
[data-css-6] {
  background-color: #ffffff;
  height: 50px;
  position: relative;
  width: 100%;
}

.css-7,
[data-css-7] {
  cursor: pointer;
  height: 100%;
  padding: 16px 20px;
}

.css-8,
[data-css-8] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-11,
[data-css-11] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-12,
[data-css-12] {
  width: 16px;
  height: 16px;
  fill: lightGrey;
}

.css-13,
[data-css-13] {
  position: absolute;
  top: 0;
  right: 0;
}

.css-14,
[data-css-14] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-15,
[data-css-15] {
  width: 10px;
  height: 10px;
  stroke: black;
}

.css-16,
[data-css-16] {
  align-items: stretch;
  border: none;
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  cursor: pointer;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 0;
  width: 100%;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.css-17,
[data-css-17] {
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  background-color: #ffffff;
  max-height: 200px;
  overflow: hidden;
  width: 100%;
  z-index: 9999;
}

.css-18,
[data-css-18] {
  border-top: 1px solid #ecf0f1;
  max-height: 151px;
  overflow-y: auto;
  overflow-x: hidden;
}

.css-18::-webkit-scrollbar,
[data-css-18]::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 10px;
}

.css-18::-webkit-scrollbar-thumb,
[data-css-18]::-webkit-scrollbar-thumb {
  border-radius: 6px;
  border: 2px solid white;
  background-color: rgba(0,0,0,.3);
  box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.css-21,
[data-css-21] {
  position: absolute;
}

.css-22,
[data-css-22] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-23,
[data-css-23] {
  pointer-events: none;
}

.css-24,
[data-css-24] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-left: 40px;
  padding-top: 0;
  padding-right: 15px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-24:required,
[data-css-24]:required {
  box-shadow: none;
}

.css-24:-webkit-autofill ~ .label,
[data-css-24]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-24:-webkit-autofill ~ .checkmark,
[data-css-24]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-24:-webkit-autofill,
[data-css-24]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-24::-ms-clear,
[data-css-24]::-ms-clear {
  display: none;
}

.css-28,
[data-css-28] {
  position: absolute;
  top: 0;
  left: 15px;
  bottom: 0;
}

.css-29,
[data-css-29] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-30,
[data-css-30] {
  width: 16px;
  height: 16px;
  stroke: #626262;
}

.css-31,
[data-css-31] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  cursor: pointer;
  background-color: white;
}

.css-32,
[data-css-32] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-33,
[data-css-33] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-34,
[data-css-34] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-left: 40px;
  padding-top: 10px;
  padding-right: 50px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-34:required,
[data-css-34]:required {
  box-shadow: none;
}

.css-34:-webkit-autofill ~ .label,
[data-css-34]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-34:-webkit-autofill ~ .checkmark,
[data-css-34]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-34:-webkit-autofill,
[data-css-34]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-34::-ms-clear,
[data-css-34]::-ms-clear {
  display: none;
}

.css-38,
[data-css-38] {
  position: absolute;
  left: 40px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns="downshift-2-menu"
    data-css-16=""
    role="combobox"
  >
    <div
      data-css-5=""
      data-css-8=""
    >
      <div
        data-css-6=""
        data-css-9=""
        data-testid="searchable-dropdown"
      >
        <div
          data-css-5=""
          data-css-8=""
          style="width: 100%;"
        >
          <div
            data-css-23=""
            data-css-29=""
            data-css-28=""
          >
            <div
              data-css-8=""
              data-css-30=""
            />
          </div>
          <input
            aria-required="false"
            data-css-34=""
            data-css-0=""
            disabled=""
            name=""
            placeholder="select something..."
            readonly=""
            type="text"
            value="dog"
          />
          <div
            class="label"
            data-css-38=""
            data-css-8=""
            style="opacity: 1; top: 8px;"
          >
            <div
              data-css-8=""
              data-css-11=""
            >
              some label
               
            </div>
          </div>
          <div
            class="checkmark"
            data-css-10=""
            data-css-8=""
          >
            <div
              data-css-8=""
              data-css-12=""
            />
          </div>
        </div>
        <div
          data-css-13=""
          data-css-8=""
          data-css-7=""
        >
          <div
            data-css-14=""
          >
            <div
              data-css-15=""
              data-css-8=""
              data-testid="searchable-dropdown-arrow-down"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-5=""
      data-css-8=""
    >
      <div
        data-css-21=""
        data-css-17=""
        data-css-8=""
      >
        <div
          data-css-22=""
        >
          <div
            data-css-8=""
            data-css-1=""
          >
            <div
              data-css-5=""
              data-css-8=""
              style="width: 100%;"
            >
              <div
                data-css-23=""
                data-css-29=""
                data-css-28=""
              >
                <div
                  data-css-8=""
                  data-css-30=""
                />
              </div>
              <input
                aria-required="false"
                data-css-24=""
                data-e2e="searchable-dropdown-search-input"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="checkmark"
                data-css-10=""
                data-css-8=""
              >
                <div
                  data-css-8=""
                  data-css-12=""
                />
              </div>
            </div>
          </div>
          <div
            data-css-18=""
            data-css-8=""
          >
            <div
              data-css-22=""
            >
              <div
                aria-selected="false"
                data-css-31=""
                data-css-4=""
                data-css-32=""
                id="downshift-2-item-0"
                role="option"
              >
                <div
                  data-css-33=""
                  data-css-8=""
                  data-css-2=""
                >
                  dog
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-31=""
                data-css-4=""
                data-css-32=""
                id="downshift-2-item-1"
                role="option"
              >
                <div
                  data-css-33=""
                  data-css-8=""
                  data-css-2=""
                >
                  cat
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-31=""
                data-css-4=""
                data-css-32=""
                id="downshift-2-item-2"
                role="option"
              >
                <div
                  data-css-33=""
                  data-css-8=""
                  data-css-2=""
                >
                  apple
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchableDropdown should render with load more 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-1,
[data-css-1] {
  background-color: #ffffff;
  color: #000000;
  overflow: hidden;
  padding-right: 30px;
  pointer-events: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 5px);
}

.css-2,
[data-css-2] {
  border-top: 1px solid #ecf0f1;
}

.css-3,
[data-css-3] {
  width: 100%;
}

.css-4,
[data-css-5]:hover {
  background-color: #f9fafb;
}

.css-6,
[data-css-6] {
  position: relative;
}

.css-7,
[data-css-7] {
  background-color: #ffffff;
  height: 50px;
  position: relative;
  width: 100%;
}

.css-8,
[data-css-8] {
  cursor: pointer;
  height: 100%;
  padding: 16px 20px;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  box-sizing: border-box;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
}

.css-11,
[data-css-11] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-12,
[data-css-12] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-13,
[data-css-13] {
  width: 16px;
  height: 16px;
  fill: lightGrey;
}

.css-14,
[data-css-14] {
  position: absolute;
  top: 0;
  right: 0;
}

.css-15,
[data-css-15] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-16,
[data-css-16] {
  width: 10px;
  height: 10px;
  stroke: black;
}

.css-17,
[data-css-17] {
  align-items: stretch;
  border: none;
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  cursor: pointer;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 0;
  width: 100%;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.css-18,
[data-css-18] {
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  background-color: #ffffff;
  max-height: 200px;
  overflow: hidden;
  width: 100%;
  z-index: 9999;
}

.css-19,
[data-css-19] {
  border-top: 1px solid #ecf0f1;
  max-height: 151px;
  overflow-y: auto;
  overflow-x: hidden;
}

.css-19::-webkit-scrollbar,
[data-css-19]::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 10px;
}

.css-19::-webkit-scrollbar-thumb,
[data-css-19]::-webkit-scrollbar-thumb {
  border-radius: 6px;
  border: 2px solid white;
  background-color: rgba(0,0,0,.3);
  box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.css-22,
[data-css-22] {
  position: absolute;
}

.css-23,
[data-css-23] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-24,
[data-css-24] {
  pointer-events: none;
}

.css-25,
[data-css-25] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-left: 40px;
  padding-top: 0;
  padding-right: 15px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-25:required,
[data-css-25]:required {
  box-shadow: none;
}

.css-25:-webkit-autofill ~ .label,
[data-css-25]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-25:-webkit-autofill ~ .checkmark,
[data-css-25]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-25:-webkit-autofill,
[data-css-25]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-25::-ms-clear,
[data-css-25]::-ms-clear {
  display: none;
}

.css-29,
[data-css-29] {
  position: absolute;
  top: 0;
  left: 15px;
  bottom: 0;
}

.css-30,
[data-css-30] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-31,
[data-css-31] {
  width: 16px;
  height: 16px;
  stroke: #626262;
}

.css-32,
[data-css-32] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  cursor: pointer;
  background-color: white;
}

.css-33,
[data-css-33] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-34,
[data-css-34] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-35,
[data-css-35] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  padding-right: 50px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-35:required,
[data-css-35]:required {
  box-shadow: none;
}

.css-35:-webkit-autofill ~ .label,
[data-css-35]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-35:-webkit-autofill ~ .checkmark,
[data-css-35]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-35:-webkit-autofill,
[data-css-35]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-35::-ms-clear,
[data-css-35]::-ms-clear {
  display: none;
}

.css-39,
[data-css-39] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-40,
[data-css-40] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    aria-owns="downshift-4-menu"
    data-css-17=""
    role="combobox"
  >
    <div
      data-css-6=""
      data-css-9=""
    >
      <div
        data-css-7=""
        data-css-10=""
        data-testid="searchable-dropdown"
      >
        <div
          data-css-6=""
          data-css-9=""
          style="width: 100%;"
        >
          <input
            aria-required="false"
            data-css-35=""
            data-css-1=""
            disabled=""
            name=""
            placeholder="select something..."
            readonly=""
            type="text"
            value=""
          />
          <div
            class="label"
            data-css-9=""
            data-css-0=""
            style="opacity: 0; top: 12px;"
          >
            <div
              data-css-9=""
              data-css-12=""
            >
              some label
               
            </div>
          </div>
          <div
            class="checkmark"
            data-css-11=""
            data-css-9=""
          >
            <div
              data-css-9=""
              data-css-13=""
            />
          </div>
        </div>
        <div
          data-css-14=""
          data-css-9=""
          data-css-8=""
        >
          <div
            data-css-15=""
          >
            <div
              data-css-16=""
              data-css-9=""
              data-testid="searchable-dropdown-arrow-down"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6=""
      data-css-9=""
    >
      <div
        data-css-22=""
        data-css-18=""
        data-css-9=""
      >
        <div
          data-css-23=""
        >
          <div
            data-css-9=""
            data-css-2=""
          >
            <div
              data-css-6=""
              data-css-9=""
              style="width: 100%;"
            >
              <div
                data-css-24=""
                data-css-30=""
                data-css-29=""
              >
                <div
                  data-css-9=""
                  data-css-31=""
                />
              </div>
              <input
                aria-required="false"
                data-css-25=""
                data-e2e="searchable-dropdown-search-input"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="checkmark"
                data-css-11=""
                data-css-9=""
              >
                <div
                  data-css-9=""
                  data-css-13=""
                />
              </div>
            </div>
          </div>
          <div
            data-css-19=""
            data-css-9=""
          >
            <div
              data-css-23=""
            >
              <div
                aria-selected="false"
                data-css-32=""
                data-css-5=""
                data-css-33=""
                id="downshift-4-item-0"
                role="option"
              >
                <div
                  data-css-34=""
                  data-css-9=""
                  data-css-3=""
                >
                  dog
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-32=""
                data-css-5=""
                data-css-33=""
                id="downshift-4-item-1"
                role="option"
              >
                <div
                  data-css-34=""
                  data-css-9=""
                  data-css-3=""
                >
                  cat
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-32=""
                data-css-5=""
                data-css-33=""
                id="downshift-4-item-2"
                role="option"
              >
                <div
                  data-css-34=""
                  data-css-9=""
                  data-css-3=""
                >
                  apple
                </div>
              </div>
              <div
                data-css-39=""
                data-css-5=""
                data-css-30=""
              >
                <div
                  data-css-9=""
                  data-css-3=""
                  data-css-40=""
                  data-testid="searchable-dropdown-load-more"
                >
                  Load more
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchableDropdown should render with no results 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-1,
[data-css-1] {
  background-color: #ffffff;
  color: #000000;
  overflow: hidden;
  padding-right: 30px;
  pointer-events: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 5px);
}

.css-2,
[data-css-2] {
  border-top: 1px solid #ecf0f1;
}

.css-3,
[data-css-3] {
  width: 100%;
}

.css-4,
[data-css-4] {
  position: relative;
}

.css-5,
[data-css-5] {
  background-color: #ffffff;
  height: 50px;
  position: relative;
  width: 100%;
}

.css-6,
[data-css-6] {
  cursor: pointer;
  height: 100%;
  padding: 16px 20px;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-8,
[data-css-8] {
  box-sizing: border-box;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
}

.css-9,
[data-css-9] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-10,
[data-css-10] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-11,
[data-css-11] {
  width: 16px;
  height: 16px;
  fill: lightGrey;
}

.css-12,
[data-css-12] {
  position: absolute;
  top: 0;
  right: 0;
}

.css-13,
[data-css-13] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-14,
[data-css-14] {
  width: 10px;
  height: 10px;
  stroke: black;
}

.css-15,
[data-css-15] {
  align-items: stretch;
  border: none;
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  cursor: pointer;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 0;
  width: 100%;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.css-16,
[data-css-16] {
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  background-color: #ffffff;
  max-height: 200px;
  overflow: hidden;
  width: 100%;
  z-index: 9999;
}

.css-17,
[data-css-17] {
  border-top: 1px solid #ecf0f1;
  max-height: 151px;
  overflow-y: auto;
  overflow-x: hidden;
}

.css-17::-webkit-scrollbar,
[data-css-17]::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 10px;
}

.css-17::-webkit-scrollbar-thumb,
[data-css-17]::-webkit-scrollbar-thumb {
  border-radius: 6px;
  border: 2px solid white;
  background-color: rgba(0,0,0,.3);
  box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.css-20,
[data-css-20] {
  position: absolute;
}

.css-21,
[data-css-21] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-22,
[data-css-22] {
  pointer-events: none;
}

.css-23,
[data-css-23] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-left: 40px;
  padding-top: 0;
  padding-right: 15px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-23:required,
[data-css-23]:required {
  box-shadow: none;
}

.css-23:-webkit-autofill ~ .label,
[data-css-23]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-23:-webkit-autofill ~ .checkmark,
[data-css-23]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-23:-webkit-autofill,
[data-css-23]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-23::-ms-clear,
[data-css-23]::-ms-clear {
  display: none;
}

.css-27,
[data-css-27] {
  position: absolute;
  top: 0;
  left: 15px;
  bottom: 0;
}

.css-28,
[data-css-28] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-29,
[data-css-29] {
  width: 16px;
  height: 16px;
  stroke: #626262;
}

.css-30,
[data-css-30] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-31,
[data-css-31] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  padding-right: 50px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-31:required,
[data-css-31]:required {
  box-shadow: none;
}

.css-31:-webkit-autofill ~ .label,
[data-css-31]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-31:-webkit-autofill ~ .checkmark,
[data-css-31]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-31:-webkit-autofill,
[data-css-31]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-31::-ms-clear,
[data-css-31]::-ms-clear {
  display: none;
}

.css-35,
[data-css-35] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    aria-owns="downshift-3-menu"
    data-css-15=""
    role="combobox"
  >
    <div
      data-css-4=""
      data-css-7=""
    >
      <div
        data-css-5=""
        data-css-8=""
        data-testid="searchable-dropdown"
      >
        <div
          data-css-4=""
          data-css-7=""
          style="width: 100%;"
        >
          <input
            aria-required="false"
            data-css-31=""
            data-css-1=""
            disabled=""
            name=""
            placeholder="select something..."
            readonly=""
            type="text"
            value=""
          />
          <div
            class="label"
            data-css-7=""
            data-css-0=""
            style="opacity: 0; top: 12px;"
          >
            <div
              data-css-7=""
              data-css-10=""
            >
              some label
               
            </div>
          </div>
          <div
            class="checkmark"
            data-css-9=""
            data-css-7=""
          >
            <div
              data-css-7=""
              data-css-11=""
            />
          </div>
        </div>
        <div
          data-css-12=""
          data-css-7=""
          data-css-6=""
        >
          <div
            data-css-13=""
          >
            <div
              data-css-14=""
              data-css-7=""
              data-testid="searchable-dropdown-arrow-down"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-4=""
      data-css-7=""
    >
      <div
        data-css-20=""
        data-css-16=""
        data-css-7=""
      >
        <div
          data-css-21=""
        >
          <div
            data-css-7=""
            data-css-2=""
          >
            <div
              data-css-4=""
              data-css-7=""
              style="width: 100%;"
            >
              <div
                data-css-22=""
                data-css-28=""
                data-css-27=""
              >
                <div
                  data-css-7=""
                  data-css-29=""
                />
              </div>
              <input
                aria-required="false"
                data-css-23=""
                data-e2e="searchable-dropdown-search-input"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="checkmark"
                data-css-9=""
                data-css-7=""
              >
                <div
                  data-css-7=""
                  data-css-11=""
                />
              </div>
            </div>
          </div>
          <div
            data-css-17=""
            data-css-7=""
          >
            <div
              data-css-21=""
            >
              <div
                data-css-35=""
                data-css-28=""
              >
                <div
                  data-css-30=""
                  data-css-7=""
                  data-css-3=""
                  data-testid="searchable-dropdown-no-results"
                >
                  No results found
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchableDropdown should render with placement bottom (default) 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-1,
[data-css-1] {
  background-color: #ffffff;
  color: #000000;
  overflow: hidden;
  padding-right: 30px;
  pointer-events: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 5px);
}

.css-2,
[data-css-2] {
  border-top: 1px solid #ecf0f1;
}

.css-3,
[data-css-3] {
  width: 100%;
}

.css-4,
[data-css-5]:hover {
  background-color: #f9fafb;
}

.css-6,
[data-css-6] {
  position: relative;
}

.css-7,
[data-css-7] {
  background-color: #ffffff;
  height: 50px;
  position: relative;
  width: 100%;
}

.css-8,
[data-css-8] {
  cursor: pointer;
  height: 100%;
  padding: 16px 20px;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  box-sizing: border-box;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
}

.css-11,
[data-css-11] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 10px;
  padding-right: 50px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-11:required,
[data-css-11]:required {
  box-shadow: none;
}

.css-11:-webkit-autofill ~ .label,
[data-css-11]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-11:-webkit-autofill ~ .checkmark,
[data-css-11]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-11:-webkit-autofill,
[data-css-11]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-11::-ms-clear,
[data-css-11]::-ms-clear {
  display: none;
}

.css-15,
[data-css-15] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-16,
[data-css-16] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-17,
[data-css-17] {
  width: 16px;
  height: 16px;
  fill: lightGrey;
}

.css-18,
[data-css-18] {
  position: absolute;
  top: 0;
  right: 0;
}

.css-19,
[data-css-19] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-20,
[data-css-20] {
  width: 10px;
  height: 10px;
  stroke: black;
}

.css-21,
[data-css-21] {
  align-items: stretch;
  border: none;
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  cursor: pointer;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 0;
  width: 100%;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.css-22,
[data-css-22] {
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  background-color: #ffffff;
  max-height: 200px;
  overflow: hidden;
  width: 100%;
  z-index: 9999;
}

.css-23,
[data-css-23] {
  border-top: 1px solid #ecf0f1;
  max-height: 151px;
  overflow-y: auto;
  overflow-x: hidden;
}

.css-23::-webkit-scrollbar,
[data-css-23]::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 10px;
}

.css-23::-webkit-scrollbar-thumb,
[data-css-23]::-webkit-scrollbar-thumb {
  border-radius: 6px;
  border: 2px solid white;
  background-color: rgba(0,0,0,.3);
  box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.css-26,
[data-css-26] {
  position: absolute;
}

.css-27,
[data-css-27] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-28,
[data-css-28] {
  pointer-events: none;
}

.css-29,
[data-css-29] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-left: 40px;
  padding-top: 0;
  padding-right: 15px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-29:required,
[data-css-29]:required {
  box-shadow: none;
}

.css-29:-webkit-autofill ~ .label,
[data-css-29]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-29:-webkit-autofill ~ .checkmark,
[data-css-29]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-29:-webkit-autofill,
[data-css-29]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-29::-ms-clear,
[data-css-29]::-ms-clear {
  display: none;
}

.css-33,
[data-css-33] {
  position: absolute;
  top: 0;
  left: 15px;
  bottom: 0;
}

.css-34,
[data-css-34] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-35,
[data-css-35] {
  width: 16px;
  height: 16px;
  stroke: #626262;
}

.css-36,
[data-css-36] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  cursor: pointer;
  background-color: white;
}

.css-37,
[data-css-37] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-38,
[data-css-38] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    aria-owns="downshift-0-menu"
    data-css-21=""
    role="combobox"
  >
    <div
      data-css-6=""
      data-css-9=""
    >
      <div
        data-css-7=""
        data-css-10=""
        data-testid="searchable-dropdown"
      >
        <div
          data-css-6=""
          data-css-9=""
          style="width: 100%;"
        >
          <input
            aria-required="false"
            data-css-11=""
            data-css-1=""
            disabled=""
            name="searchable-dropdown-form-name"
            placeholder="select something..."
            readonly=""
            type="text"
            value="dog"
          />
          <div
            class="label"
            data-css-9=""
            data-css-0=""
            style="opacity: 1; top: 8px;"
          >
            <div
              data-css-9=""
              data-css-16=""
            >
              some label
               
            </div>
          </div>
          <div
            class="checkmark"
            data-css-15=""
            data-css-9=""
          >
            <div
              data-css-9=""
              data-css-17=""
            />
          </div>
        </div>
        <div
          data-css-18=""
          data-css-9=""
          data-css-8=""
        >
          <div
            data-css-19=""
          >
            <div
              data-css-20=""
              data-css-9=""
              data-testid="searchable-dropdown-arrow-down"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6=""
      data-css-9=""
    >
      <div
        data-css-26=""
        data-css-22=""
        data-css-9=""
      >
        <div
          data-css-27=""
        >
          <div
            data-css-9=""
            data-css-2=""
          >
            <div
              data-css-6=""
              data-css-9=""
              style="width: 100%;"
            >
              <div
                data-css-28=""
                data-css-34=""
                data-css-33=""
              >
                <div
                  data-css-9=""
                  data-css-35=""
                />
              </div>
              <input
                aria-required="false"
                data-css-29=""
                data-e2e="searchable-dropdown-search-input"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="checkmark"
                data-css-15=""
                data-css-9=""
              >
                <div
                  data-css-9=""
                  data-css-17=""
                />
              </div>
            </div>
          </div>
          <div
            data-css-23=""
            data-css-9=""
          >
            <div
              data-css-27=""
            >
              <div
                aria-selected="false"
                data-css-36=""
                data-css-5=""
                data-css-37=""
                id="downshift-0-item-0"
                role="option"
              >
                <div
                  data-css-38=""
                  data-css-9=""
                  data-css-3=""
                >
                  dog
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-36=""
                data-css-5=""
                data-css-37=""
                id="downshift-0-item-1"
                role="option"
              >
                <div
                  data-css-38=""
                  data-css-9=""
                  data-css-3=""
                >
                  cat
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-36=""
                data-css-5=""
                data-css-37=""
                id="downshift-0-item-2"
                role="option"
              >
                <div
                  data-css-38=""
                  data-css-9=""
                  data-css-3=""
                >
                  apple
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchableDropdown should render with placement top 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  left: 15px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-1,
[data-css-1] {
  background-color: #ffffff;
  color: #000000;
  overflow: hidden;
  padding-right: 30px;
  pointer-events: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 5px);
}

.css-2,
[data-css-2] {
  border-top: 1px solid #ecf0f1;
}

.css-3,
[data-css-3] {
  width: 100%;
}

.css-4,
[data-css-5]:hover {
  background-color: #f9fafb;
}

.css-6,
[data-css-6] {
  position: relative;
}

.css-7,
[data-css-7] {
  background-color: #ffffff;
  height: 50px;
  position: relative;
  width: 100%;
}

.css-8,
[data-css-8] {
  cursor: pointer;
  height: 100%;
  padding: 16px 20px;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  box-sizing: border-box;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-flex: 0 0 auto;
}

.css-11,
[data-css-11] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 10px;
  padding-right: 50px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-11:required,
[data-css-11]:required {
  box-shadow: none;
}

.css-11:-webkit-autofill ~ .label,
[data-css-11]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-11:-webkit-autofill ~ .checkmark,
[data-css-11]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-11:-webkit-autofill,
[data-css-11]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-11::-ms-clear,
[data-css-11]::-ms-clear {
  display: none;
}

.css-15,
[data-css-15] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-16,
[data-css-16] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-17,
[data-css-17] {
  width: 16px;
  height: 16px;
  fill: lightGrey;
}

.css-18,
[data-css-18] {
  position: absolute;
  top: 0;
  right: 0;
}

.css-19,
[data-css-19] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-20,
[data-css-20] {
  width: 10px;
  height: 10px;
  stroke: black;
}

.css-21,
[data-css-21] {
  align-items: stretch;
  border: none;
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  cursor: pointer;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 0;
  width: 100%;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.css-22,
[data-css-22] {
  box-shadow: 1px 1px 3px rgba(29, 29, 29, 0.125);
  background-color: #ffffff;
  max-height: 200px;
  overflow: hidden;
  width: 100%;
  z-index: 9999;
}

.css-23,
[data-css-23] {
  border-top: 1px solid #ecf0f1;
  max-height: 151px;
  overflow-y: auto;
  overflow-x: hidden;
}

.css-23::-webkit-scrollbar,
[data-css-23]::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 10px;
}

.css-23::-webkit-scrollbar-thumb,
[data-css-23]::-webkit-scrollbar-thumb {
  border-radius: 6px;
  border: 2px solid white;
  background-color: rgba(0,0,0,.3);
  box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.css-26,
[data-css-26] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-27,
[data-css-27] {
  pointer-events: none;
}

.css-28,
[data-css-28] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-left: 40px;
  padding-top: 0;
  padding-right: 15px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-28:required,
[data-css-28]:required {
  box-shadow: none;
}

.css-28:-webkit-autofill ~ .label,
[data-css-28]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-28:-webkit-autofill ~ .checkmark,
[data-css-28]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-28:-webkit-autofill,
[data-css-28]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-28::-ms-clear,
[data-css-28]::-ms-clear {
  display: none;
}

.css-32,
[data-css-32] {
  position: absolute;
  top: 0;
  left: 15px;
  bottom: 0;
}

.css-33,
[data-css-33] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-34,
[data-css-34] {
  width: 16px;
  height: 16px;
  stroke: #626262;
}

.css-35,
[data-css-35] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  cursor: pointer;
  background-color: white;
}

.css-36,
[data-css-36] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-37,
[data-css-37] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-38,
[data-css-38] {
  position: absolute;
  bottom: 50px;
}

.css-39,
[data-css-39] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column-reverse;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: reverse;
  -webkit-flex-direction: column-reverse;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    aria-owns="downshift-1-menu"
    data-css-21=""
    role="combobox"
  >
    <div
      data-css-6=""
      data-css-9=""
    >
      <div
        data-css-7=""
        data-css-10=""
        data-testid="searchable-dropdown"
      >
        <div
          data-css-6=""
          data-css-9=""
          style="width: 100%;"
        >
          <input
            aria-required="false"
            data-css-11=""
            data-css-1=""
            disabled=""
            name=""
            placeholder="select something..."
            readonly=""
            type="text"
            value="dog"
          />
          <div
            class="label"
            data-css-9=""
            data-css-0=""
            style="opacity: 1; top: 8px;"
          >
            <div
              data-css-9=""
              data-css-16=""
            >
              some label
               
            </div>
          </div>
          <div
            class="checkmark"
            data-css-15=""
            data-css-9=""
          >
            <div
              data-css-9=""
              data-css-17=""
            />
          </div>
        </div>
        <div
          data-css-18=""
          data-css-9=""
          data-css-8=""
        >
          <div
            data-css-19=""
          >
            <div
              data-css-20=""
              data-css-9=""
              data-testid="searchable-dropdown-arrow-up"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6=""
      data-css-9=""
    >
      <div
        data-css-38=""
        data-css-22=""
        data-css-9=""
      >
        <div
          data-css-39=""
        >
          <div
            data-css-9=""
            data-css-2=""
          >
            <div
              data-css-6=""
              data-css-9=""
              style="width: 100%;"
            >
              <div
                data-css-27=""
                data-css-33=""
                data-css-32=""
              >
                <div
                  data-css-9=""
                  data-css-34=""
                />
              </div>
              <input
                aria-required="false"
                data-css-28=""
                data-e2e="searchable-dropdown-search-input"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="checkmark"
                data-css-15=""
                data-css-9=""
              >
                <div
                  data-css-9=""
                  data-css-17=""
                />
              </div>
            </div>
          </div>
          <div
            data-css-23=""
            data-css-9=""
          >
            <div
              data-css-26=""
            >
              <div
                aria-selected="false"
                data-css-35=""
                data-css-5=""
                data-css-36=""
                id="downshift-1-item-0"
                role="option"
              >
                <div
                  data-css-37=""
                  data-css-9=""
                  data-css-3=""
                >
                  dog
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-35=""
                data-css-5=""
                data-css-36=""
                id="downshift-1-item-1"
                role="option"
              >
                <div
                  data-css-37=""
                  data-css-9=""
                  data-css-3=""
                >
                  cat
                </div>
              </div>
              <div
                aria-selected="false"
                data-css-35=""
                data-css-5=""
                data-css-36=""
                id="downshift-1-item-2"
                role="option"
              >
                <div
                  data-css-37=""
                  data-css-9=""
                  data-css-3=""
                >
                  apple
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
